# mcpx

./: .gitignore  .goreleaser.yml  AGENTS.md  Makefile  README.md  go.mod  go.sum
.github/workflows/: ci.yml  release.yml
cmd/mcpx/: main.go  main_test.go
docs/: design.md  install.md  release-checklist.md  release-notes-template.md  release.md  roadmap.md  usage.md
internal/bootstrap/: prereq.go  prereq_test.go  resolve.go  resolve_helpers_test.go  resolve_test.go
internal/cache/: cache.go  cache_test.go
internal/cli/: add.go  add_test.go  completion.go  completion_call_flags.go  completion_runtime.go  completion_runtime_test.go  completion_scripts.go  completion_test.go  flags.go  flags_test.go  help.go  help_schema.go  help_schema_test.go  help_test.go  output_mode.go  perf_bench_test.go  root.go  root_coverage_test.go  root_flags.go  root_test.go  shim.go  shim_test.go  skill.go  skill_server.go  skill_server_test.go  skill_test.go  tool_flags.go  tool_list_output.go  tool_list_output_test.go
internal/config/: config.go  config_test.go  edit_test.go  fallback.go  fallback_test.go  save.go  types.go  validate.go  validate_test.go
internal/daemon/: daemon.go  daemon_cache_test.go  daemon_helpers_test.go  daemon_tools_test.go  daemon_wrappers_test.go  error_map.go  (+8 more)
packaging/pypi/: README.md  pyproject.toml
packaging/pypi/src/mcpx_go/: __init__.py  checksum_manifest.py  cli.py  install.py
packaging/pypi/tests/: test_install.py
scripts/: build_pypi_dist.sh  perf_bench.sh  perf_cli_loop.sh  publish_npm_wrapper.sh  publish_pypi_wrapper.sh  qa_matrix.sh
(+43 files in other folders)
