[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "mcpx-go"
version = "0.0.0"
description = "Installable Python package that provides the mcpx CLI by downloading the official Go binary"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "George Lydakis", email = "george@lydakis.me" }]
keywords = ["mcp", "cli", "mcpx", "go"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: POSIX :: Linux"
]

[project.urls]
Homepage = "https://github.com/lydakis/mcpx"
Repository = "https://github.com/lydakis/mcpx"
Issues = "https://github.com/lydakis/mcpx/issues"

[project.scripts]
mcpx = "mcpx_go.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mcpx_go"]
